# Gateorix

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Plan.md  README.md  SECURITY.md  Structure.md  package-lock.json  tauri_logs.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-cli.yml
.scaffold/vue-frontend/: package.json
cli/: README.md  package-lock.json  package.json
cli/scripts/: sync-templates.mjs
cli/src/: index.ts
cli/src/commands/: add-plugin.ts  add-runtime.ts  build.ts  dev.ts  doctor.ts  init.ts
cli/src/utils/: detect.ts  exec.ts  logger.ts
docs/: NPMcommands.md  adapter-protocol.md  architecture.md  claudeprompt.md  claudeprompt2.md  claudeprompt3.md  perplexityprompt.md  roadmap.md  security.md
examples/hello-react-cpp/: README.md  gateorix.config.json
examples/hello-react-cpp/frontend/: index.html  package.json
examples/hello-react-cs/: README.md  gateorix.config.json
examples/hello-react-cs/frontend/: index.html  package.json
examples/hello-react-fs/: README.md  gateorix.config.json
examples/hello-react-fs/backend/: Program.fs
examples/hello-react-fs/frontend/: index.html  package.json
examples/hello-react-go/: README.md  gateorix.config.json
examples/hello-react-go/backend/: go.mod
examples/hello-react-go/frontend/: index.html  package.json
examples/hello-react-go/frontend/src-tauri/: Cargo.toml  tauri.conf.json
examples/hello-react-python/: README.md  gateorix.config.json
examples/hello-react-python/backend/: main.py
examples/hello-react-python/frontend/: index.html  package-lock.json  package.json
examples/hello-react-python/frontend/src-tauri/: Cargo.toml  tauri.conf.json
examples/hello-react-python/frontend/src-tauri/src/: lib.rs
examples/hello-solid-cpp/: README.md  gateorix.config.json
examples/hello-solid-cpp/frontend/: package.json
examples/hello-solid-cs/: README.md  gateorix.config.json
examples/hello-solid-cs/frontend/: index.html  package.json
examples/hello-solid-fs/: README.md  gateorix.config.json
examples/hello-solid-fs/backend/: HelloGateorixFs.fsproj
examples/hello-solid-fs/frontend/: package.json
examples/hello-solid-go/: README.md  gateorix.config.json
examples/hello-solid-go/backend/: go.mod  main.go
examples/hello-solid-go/frontend/: package.json  vite.config.ts
examples/hello-solid-python/: README.md  gateorix.config.json
examples/hello-solid-python/backend/: main.py
examples/hello-solid-python/frontend/: package.json  tsconfig.json
examples/hello-svelte-cpp/: README.md  gateorix.config.json
examples/hello-svelte-cpp/frontend/: index.html  package.json
examples/hello-svelte-cs/: README.md  gateorix.config.json
examples/hello-svelte-cs/frontend/: package.json  vite.config.ts
examples/hello-svelte-fs/: README.md  gateorix.config.json
examples/hello-svelte-fs/frontend/: package.json
examples/hello-svelte-go/: README.md  gateorix.config.json
examples/hello-svelte-go/backend/: go.mod
examples/hello-svelte-go/frontend/: package.json  tsconfig.json
examples/hello-svelte-python/: README.md  gateorix.config.json
examples/hello-vanilla-cpp/: README.md  gateorix.config.json
examples/hello-vanilla-cpp/backend/: CMakeLists.txt  main.cpp
examples/hello-vanilla-cs/: README.md  gateorix.config.json
examples/hello-vanilla-fs/: README.md  gateorix.config.json
examples/hello-vanilla-go/: README.md  gateorix.config.json
examples/hello-vanilla-python/: README.md  gateorix.config.json
examples/hello-vue-cpp/: README.md  gateorix.config.json
examples/hello-vue-cs/: README.md  gateorix.config.json
examples/hello-vue-fs/: README.md  gateorix.config.json
examples/hello-vue-go/: README.md  gateorix.config.json
examples/hello-vue-python/: README.md  gateorix.config.json
host-core/: Cargo.toml  README.md
host-core/src/: lib.rs  logging.rs
host-core/src/app/: mod.rs
host-core/src/ipc/: bridge.rs  mod.rs  protocol.rs
host-core/src/permissions/: mod.rs
host-core/src/plugins/: mod.rs
host-core/src/runtime/: adapter.rs  mod.rs  process.rs
host-core/src/window/: mod.rs
plugins/clipboard/: Cargo.toml
plugins/clipboard/src/: lib.rs
plugins/filesystem/: Cargo.toml
plugins/filesystem/src/: lib.rs
plugins/notifications/: Cargo.toml
plugins/notifications/src/: lib.rs
plugins/process/: Cargo.toml
plugins/process/src/: lib.rs
sdk/dotnet/: README.md
sdk/go/: README.md  go.mod
sdk/go/gateorix/: adapter.go
sdk/js/: package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/gateorix/: __init__.py  adapter.py
sdk/swift/: Package.swift  README.md
templates/react-python/: gateorix.config.json
templates/vanilla/: README.md  gateorix.config.json
vscode-extension/: package.json
vscode-extension/schemas/: gateorix-config.schema.json
vscode-extension/src/: extension.ts
(+67 files in other folders)
