[package]
name = "gateorix-host-core"
description = "Gateorix native host runtime — window management, IPC bridge, permissions, and plugin host"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
