[package]
name = "gateorix-plugin-clipboard"
description = "Gateorix clipboard plugin — read/write system clipboard"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gateorix-host-core = { path = "../../host-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
