[package]
name = "gateorix-plugin-process"
description = "Gateorix process plugin — controlled command execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gateorix-host-core = { path = "../../host-core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
