[package]
name = "hello-gateorix-go"
version = "0.1.0"
description = "Gateorix example — React frontend + Go backend desktop app"
authors = ["Gateorix"]
license = "MIT"
repository = "https://github.com/reyisjones/Gateorix"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
url = "2"
uuid = { version = "1", features = ["v4"] }
