[package]
name = "hello-gateorix"
version = "0.1.0"
description = "Gateorix example — React frontend + Python backend desktop app"
authors = ["Gateorix"]
license = "MIT"
repository = "https://github.com/gateorix/gateorix"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
uuid = { version = "1", features = ["v4"] }
